--- a/package.json
+++ b/package.json
@@ -1,16 +1,17 @@
 {
-  "name": "cantswinfish",
+  "name": "sleepingforestbot",
   "version": "1.0.0",
-  "description": "\"# cantSwimFish\"",
+  "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node index.js"
   },
+  "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "@line/bot-sdk": "^7.5.2",
-    "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "linebot": "^1.6.1"
   }
